# 2024-EUMaster4HPC-Student-Challenge

./: .gitignore  README.md  run_all.sh
TESTS/: BEST_RESULTS
TESTS/CPU_SCRIPTS/: CPU_16_NODE.sh  CPU_16_NODE_gen.sh  CPU_1_NODE.sh  CPU_2_NODE_gen.sh  CPU_32_NODE_gen.sh  CPU_3_NODE_gen.sh  CPU_8_NODE.sh  CPU_8_NODE_gen.sh  errors.txt  run_all.sh  run_all_GPU.sh
TESTS/GPU_SCRIPTS/: GPU_16_NODE.sh  GPU_16_NODE_gen.sh  GPU_1_NODE.sh  GPU_2_NODE.sh  GPU_2_NODE_gen.sh  GPU_3_NODE.sh  GPU_3_NODE_gen.sh  GPU_4_NODE.sh  GPU_4_NODE_gen.sh  GPU_8_NODE.sh  GPU_8_NODE_gen.sh  run_all.sh
TESTS/results/: MERGE_CPU_MPI_OMP.txt  MERGE_CPU_MPI_OMP_FP.txt  MERGE_CPU_MPI_OMP_FP_gen.txt  MERGE_CPU_MPI_OMP_gen.txt  MERGE_GPU_MPI.txt  MERGE_GPU_MPI_gen.txt  MERGE_GPU_NCCL.txt  MERGE_GPU_NCCL_gen.txt  clean.sh
TESTS/results/pool/: GPU_test1.txt  test.txt  test6.txt  testNCCL1.txt  testNCCL2.txt  testNCCL3.txt  testNCCL4.txt  testNCCL5.txt  test_MPI1.txt  test_MPI2.txt  test_MPI3.txt  test_MPIgen1.txt  test_MPIgen2.txt  test_MPIgen3.txt  test_gen3.txt  test_gen4.txt  test_gen6.txt  test_genNCCL1.txt  test_genNCCL2.txt  test_genNCCL3.txt  test_genNCCL4.txt  test_genNCCL5.txt
challenge/: README.md
challenge/main/: CMakeLists.txt
challenge/main/LAM/: CMakeLists.txt
challenge/main/LAM/include/: LAM.hpp
challenge/main/LAM/src/: ConjugateGradient.hpp  ConjugateGradient_CPU_MPI_OMP.hpp  ConjugateGradient_CPU_OMP.hpp  ConjugateGradient_CUDA_Kernels.cuh  ConjugateGradient_GPU_CUDA.cuh  ConjugateGradient_MultiGPUS_CUDA.cuh  ConjugateGradient_MultiGPUS_CUDA_MPI.cuh  ConjugateGradient_MultiGPUS_CUDA_NCCL.cuh  test.cpp
challenge/main/LAM/src/CPU/: ConjugateGradient_CPU_MPI_OMP.hpp  ConjugateGradient_CPU_OMP.hpp
challenge/main/LAM/src/GPU/: ConjugateGradient_CUDA_Kernels.cu  ConjugateGradient_CUDA_Kernels.cuh
challenge/main/LAM/src/GPU/distributed/: ConjugateGradient_MultiGPUS_CUDA_MPI.cu  ConjugateGradient_MultiGPUS_CUDA_MPI.cuh  ConjugateGradient_MultiGPUS_CUDA_NCCL.cu  ConjugateGradient_MultiGPUS_CUDA_NCCL.cuh  ConjugateGradient_MultiGPUS_CUDA_NCCL_multiple.txt  ConjugateGradient_MultiGPUS_CUDA_NCCL_old.txt
challenge/main/LAM/src/GPU/local/: ConjugateGradient_GPU_CUDA.cu  ConjugateGradient_GPU_CUDA.cuh  ConjugateGradient_MultiGPUS_CUDA.cu  ConjugateGradient_MultiGPUS_CUDA.cuh
challenge/main/test/: CMakeLists.txt  test_CG_CPU_MPI_OMP.cpp  test_CG_CPU_OMP.cpp  test_CG_GPU_CUDA.cu  test_CG_MultiGPUS_CUDA.cpp  test_CG_MultiGPUS_CUDA.cu  test_CG_MultiGPUS_CUDA_MPI.cpp  test_CG_MultiGPUS_CUDA_MPI.cu  test_CG_MultiGPUS_CUDA_NCCL.cpp  test_CG_MultiGPUS_CUDA_NCCL.cu  test_CG_single_GPU.cpp
conjugate_gradients-main/src/: ConjugateGradient.hpp  conjugate_gradients.cpp
conjugate_gradients-main/src/HenMPI/: init_job.sh  script_omp.sh
conjugate_gradients-main/src/HenMPI/src/: conjugate_gradients.cpp  conjugate_gradients_mpi.cpp  conjugate_gradients_mpi_e.cpp
conjugate_gradients-main/src/MelBLAS/include/: MelBLAS.hpp
conjugate_gradients-main/src/MelBLAS/src/: MelBLAS_B.hpp  MelBLAS_OMP_off.hpp  MelBLAS_baseline.hpp
results/: GPU_test_gen.txt  GPU_test_gen1.txt  STRESS_TEST_CPU_MPI_OMP.txt  STRESS_TEST_GPU_MPI.txt  STRONG_SCALABILITY_CUDA_MPI.txt  STRONG_SCALABILITY_GPU_MPI.txt  WEAK_SCALABILITY_GPU_MPI.txt  massive_2000000_64_CPU_nodes.txt  massive_4000000_256_CPU_nodes.txt  massive_560000_64GPU_MPI.txt  test2.txt  test4.txt  test5.txt  test_gen5.txt
tests/: CPU_1_NODE_gen.sh  CPU_2_NODE.sh  CPU_32_NODE.sh  CPU_3_NODE.sh  CPU_4_NODE.sh  CPU_4_NODE_gen.sh  test3.txt
tests/results/: CPU_16_NODE.res  CPU_1_NODE.res  CPU_2_NODE.res  CPU_32_NODE.res  CPU_3_NODE.res  CPU_4_NODE.res  CPU_8_NODE.res
testsGPU/: GPU_16_NODE.sh  GPU_16_NODE_gen.sh  GPU_1_NODE.sh  GPU_2_NODE.sh  GPU_2_NODE_gen.sh  GPU_3_NODE.sh  GPU_3_NODE_gen.sh  GPU_4_NODE.sh  GPU_4_NODE_gen.sh  GPU_8_NODE.sh  GPU_8_NODE_gen.sh  GPU_test.txt  errors.txt
testsGPU/results/: GPU_16_NODE.res  GPU_1_NODE.res  GPU_2_NODE.res  GPU_3_NODE.res  GPU_4_NODE.res  GPU_8_NODE.res
